<resources>
    <string name="app_name">MAD Group Project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txtSignIn">Login To Your Account</string>
    <string name="emailHint">Email Address</string>
    <string name="hintPassword">Password</string>
    <string name="loginBtnTxt">Login</string>
    <string name="txtNoAccount">Dont Have An Account ?</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtSignUpTitle">Sign Up For Free</string>
    <string name="username">User Name</string>
    <string name="phoneNo">Phone Number</string>
    <string name="hintUserpassword">Password</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="registerBtnText">Register</string>
    <string name="txtHasAccount">Have an Account ? </string>
    <string name="txtSignInLink">Sign In</string>
    <string name="loginUserNamehint">User Name</string>
    <string name="addCategoryBtn">Add Category</string>
    <string name="addCategoryBtnText">Add</string>
    <string name="addCategoryIDhint">Category ID </string>
    <string name="addCategoryTitleHint">Category Title</string>
    <string name="alertDialogTitle">Are You sure ? </string>
    <string name="alertDialogMessage">Deleted Data cant be undo</string>
    <string name="invalid_name">Please enter valid name</string>
    <string name="invalid_Phone">please enter valid phone number</string>
    <string name="invalid_phone">please enter valid phone number</string>
    <string name="invalid_license">please enter valid license</string>
    <string name="invalid_email">please enter valid email</string>
</resources>