<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="105dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/main_Color"
        android:text="@string/registerBtnText"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtUserCpassword" />

    <EditText
        android:id="@+id/editTxtUserName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />

    <EditText
        android:id="@+id/editTxtUserPhoneNo"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/phoneNo"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtUserEmail" />

    <EditText
        android:id="@+id/editTxtUserPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hintUserpassword"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtUserPhoneNo" />

    <EditText
        android:id="@+id/editTxtUserCpassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hintConfirmPassword"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtUserPassword" />

    <EditText
        android:id="@+id/editTxtUserEmail"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtUserName" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSignUpTitle"
        android:textColor="@color/main_Color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txtHasAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="95dp"
            android:text="@string/txtHasAccount"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSignInLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="171dp"
            android:onClick="HasAccount"
            android:text="@string/txtSignInLink"
            android:textColor="#0099FF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtHasAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtHasAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/regProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>