<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EFEF"
    tools:context=".LoginPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="417dp"
        android:layout_height="385dp"
        android:background="@drawable/signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSignIn"
            android:textColor="@color/main_Color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.909" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/loginTxtUserName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/loginUserNamehint"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="41dp"
        android:paddingStart="12dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTxtUserName"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="41dp"
        android:backgroundTint="@color/main_Color"
        android:text="@string/loginBtnTxt"
        android:textColor="#F3EFEF"
        android:textSize="20dp"
        android:background="@drawable/custom_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPassword"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/txtNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="32dp"
        android:text="@string/txtNoAccount"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noAccountLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="132dp"
        android:onClick="noAccount"
        android:text="@string/txtSignUp"
        android:textColor="#0099FF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtNoAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtNoAccount" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />
</androidx.constraintlayout.widget.ConstraintLayout>