<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addCategoryPage"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCategoryBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="123dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/main_Color"
        android:text="@string/addCategoryBtnText"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtCategoryTitle" />

    <EditText
        android:id="@+id/editTxtcategoryID"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_id"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/addCategoryIDhint"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCategoryImage" />

    <EditText
        android:id="@+id/editTxtCategoryTitle"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_title"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/addCategoryTitleHint"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCategoryImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="650dp"
        android:background="@color/main_Color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="164dp"
            android:layout_marginBottom="16dp"
            android:text="Add Category"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/addCategoryImage"
        android:layout_width="210dp"
        android:layout_height="237dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="386dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

</androidx.constraintlayout.widget.ConstraintLayout>